Messages not showing up bug fixes :smiley:

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,58 @@
-*{
-  padding: none;
-  margin: none;
-  outline: none;
+h1{
+  text-align: center;
+  font-family: monospace;
+  font-size: 3.8rem;
+  text-shadow: 1px 2px #999;
+}
+#container{
+  width: 60%;
+  text-align: center;
+  margin: 10vh auto;
+  padding-bottom: 15vh;
+  padding-top: 5vh;
+  font-family: sans-serif;
+  height: 50vh;
+  border: none;
+  box-shadow: 0 0 11px #2e2e2e;
+}
+p{
+  background-color: #832;
+  color: #fff;
+  padding: 4px;
+  border: none;
+  border-radius: 6px;
+  text-align: center;
+  width: 70%;
+  margin: 0 auto;
+  font-size: 1.8rem;
+  margin-bottom: 3vh;
+}
+input{
+  padding: 12px;
+  font-size: 2rem;
+  border: 1px solid #2e2e2e;
+  border-radius: 8px;
+  margin-bottom: 1.5vh;
+  width: 60%;
+}
+button{
+  width: 62%;
+  margin: 0 auto;
+  background-color: #222;
+  padding: 8px;
+  font-size: 1.8rem;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  margin-bottom: 1vh;
+}
+button:hover{
+  transition: all 0.2s ease-in-out;
+  background-color: transparent;
+  cursor: pointer;
+  color: #222;
+  box-shadow: 2px 3px 8px #333;
+}
+button:focus{
+  transform: translateY(6px);
 }
